<resources>
    <string name="app_name">bouks</string>
    <string name="best_seller">  Best Reading</string>
    <string name="todo">TODO</string>
    <string name="new_arrival">  New Arrival</string>
    <string name="recomended">  Recommended</string>
    <string name="judul_buku">Judul Buku</string>
    <string name="sipnosis">  sipnosis :</string>
    <string name="penulis_jusua_juliando">penulis : jusua juliando</string>
    <string name="category">  Category</string>
    <string name="button">Button</string>
    <string name="kategori">kategori</string>
    <string name="kategori1">kategori</string>
    <string name="kategori2">kategori</string>
    <string name="kategori3">kategori</string>
    <string name="kategori4">kategori</string>
    <string name="kategori5">kategori</string>
    <string name="kategori6">kategori</string>
    <string name="kategori7">kategori</string>
    <string name="kategori8">kategori</string>
    <string name="baca">BACA</string>
    <string name="lorem_ipsum_dolor_sit_amet_at_sea_diam_erat_in_nobis_ubique_has_contentiones_concludaturque_et_per_lorem_iudico_impetus_ne_nam_ipsum_eligendi_lucilius_id_duo_sed_ea_choro_tibique_has_doming_tamquam_oporteat_fugit_concludaturque_nec_no_ut_quem_posidonium_scripserit_pro_quidam_vituperata_usu_ei_dicit_munere_probatus_his_no_nonumy_libris_senserit_te_qui_lorem_ipsum_dolor_sit_amet_at_sea_diam_erat_in_nobis_ubique_has_contentiones_concludaturque_et_per_lorem_iudico_impetus_ne_nam_ipsum_eligendi_lucilius_id_duo_sed_ea_choro_tibique_inciderint_cu_has_doming_tamquam_oporteat_fugit_concludaturque_nec_no_ut_q">Lorem ipsum dolor sit amet, at sea diam erat, in nobis ubique has. Contentiones concludaturque et per, lorem iudico impetus ne nam. Ipsum eligendi lucilius id duo, sed ea choro tibique has doming tamquam oporteat. Fugit concludaturque nec no, ut quem posidonium scripserit pro. Quidam vituperata usu ei. Dicit munere probatus his no, nonumy libris senserit te qui. Lorem ipsum dolor sit amet, at sea diam erat, in nobis ubique has. Contentiones concludaturque et per, lorem iudico impetus ne nam. Ipsum eligendi lucilius id duo, sed ea choro tibique inciderint, cu has doming tamquam oporteat. Fugit concludaturque nec no, ut q</string>
    <string name="masukkan_no_rekening">foto bukti pembayaran :</string>
    <string name="konfirmasi">KONFIRMASI</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="_11_11">11:11</string>
    <string name="penulis_fiersa_besari">penulis: Fiersa Besari</string>
    <string name="bercerita_tentang_jodoh_yang_sebenarnya_nggak_akan_kemana_mana_sebelum_akhirnya_menetap_pada_1_hati_ketika_waktunya_telah_tiba">bercerita tentang jodoh yang sebenarnya nggak akan kemana-mana sebelum akhirnya menetap pada 1 hati ketika waktunya telah tiba.</string>
    <string name="aroma_karsa">Aroma Karsa</string>
    <string name="penulis_dee_lestari">penulis: Dee Lestari</string>
    <string name="obsesi_raras_memburu_puspa_karsa_bunga_sakti_yang_konon_mampu_mengendalikan_kehendak_dan_cuma_bisa_diidentifikasi_melalui_aroma_memertemukannya_dengan_jati_wesi_dengan_hidung_istimewa_yang_menjadikannya_seorak_peracik_parfum_sampai_kemudian_jati_bertemu_dengan_tanaya_suma_anak_tunggal_raras_yang_memekerjakannya_saat_ini_ternyata_memiliki_hidung_yang_sama_istimewanya">Obsesi Raras memburu Puspa Karsa, bunga sakti yang konon mampu mengendalikan kehendak dan cuma bisa diidentifikasi melalui aroma, memertemukannya dengan Jati Wesi, dengan hidung istimewa yang menjadikannya seorak peracik parfum. Sampai kemudian, Jati bertemu dengan Tanaya Suma, anak tunggal Raras yang memekerjakannya saat ini ternyata memiliki hidung yang sama istimewanya.</string>
    <string name="berhenti_di_kamu">Berhenti di Kamu</string>
    <string name="penulis_gia_pratama">penulis: Gia Pratama</string>
    <string name="perkara_cinta_yang_sempat_membuatnya_terpuruk_namun_pulih_kembali_setelah_berhasil_menolong_seorang_pasiennya_yang_bisulan_perkara_tuhan_yang_memang_telah_menyiapkan_yang_terbaik_untuk_gia_dengan_memisahkan_cinta_yang_menurutnya_sempurna_sungguh_roller_coaster_kisah_cintanya_begitu_menarik_untuk_disimak_sampai_membuatnya_berada_di_posisi_kedua_untuk_novel_best_seller_bulan_november_kali_ini">Perkara cinta yang sempat membuatnya terpuruk, namun pulih kembali setelah berhasil menolong seorang pasiennya yang bisulan. Perkara Tuhan yang memang telah menyiapkan yang terbaik untuk Gia dengan memisahkan cinta yang menurutnya sempurna. Sungguh roller coaster kisah cintanya begitu menarik untuk disimak sampai membuatnya berada di posisi kedua untuk novel best seller bulan November kali ini.</string>
    <string name="bumi_manusia">Bumi Manusia</string>
    <string name="penulis_pramoedya_ananta_toer">penulis: Pramoedya Ananta Toer</string>
    <string name="buku_ini_bercerita_tentang_perjalanan_seorang_tokoh_bernama_minke_minke_adalah_salah_satu_anak_pribumi_yang_sekolah_di_hbs_pada_masa_itu_yang_dapat_masuk_ke_sekolah_hbs_adalah_orang_orang_keturunan_eropa_minke_adalah_seorang_pribumi_yang_pandai_ia_sangat_pandai_menulis_tulisannya_bisa_membuat_orang_sampai_terkagum_kagum_dan_dimuat_di_berbagai_koran_belanda_pada_saat_itu_sebagai_seorang_pribumi_ia_kurang_disukai_oleh_siswa_siswi_eropa_lainnya_minke_digambarkan_sebagai_seorang_revolusioner_di_buku_ini_ia_berani_melawan_ketidakadilan_yang_terjadi_pada_bangsanya_ia_juga_berani_memberontak_terhadap_kebudayaan_jawa_yang_membuatnya_selalu_di_bawah">Buku ini bercerita tentang perjalanan seorang tokoh bernama Minke. Minke adalah salah satu anak pribumi yang sekolah di HBS. Pada masa itu, yang dapat masuk ke sekolah HBS adalah orang-orang keturunan Eropa. Minke adalah seorang pribumi yang pandai, ia sangat pandai menulis. Tulisannya bisa membuat orang sampai terkagum-kagum dan dimuat di berbagai Koran Belanda pada saat itu. Sebagai seorang pribumi, ia kurang disukai oleh siswa-siswi Eropa lainnya. Minke digambarkan sebagai seorang revolusioner di buku ini. Ia berani melawan ketidakadilan yang terjadi pada bangsanya. Ia juga berani memberontak terhadap kebudayaan Jawa, yang membuatnya selalu di bawah.</string>
    <string name="dia_adalah_kakakku">Dia Adalah Kakakku</string>
    <string name="penulis_tere_liye">penulis: Tere Liye</string>
    <string name="dia_adalah_kakakku_mengisahkan_perjuangan_seorang_laisa_yang_berkorban_luar_biasa_demi_adik_adiknya_dapat_bersekolah_meski_tidak_sedarah_dengannya_dengan_kondisi_fisik_laisa_yang_sempat_membuat_keempat_adiknya_khawatir_akibat_tak_kunjung_mendapatkan_jodoh_tapi_apakah_sebenarnya_laisa_peduli_dengan_tubuhnya_yang_gemuk_berambut_gimbal_dan_pendek_ataukah_dia_hanya_fokus_untuk_keempat_adiknya">Dia Adalah Kakakku mengisahkan perjuangan seorang Laisa, yang berkorban luar biasa demi adik-adiknya dapat bersekolah meski tidak sedarah dengannya. Dengan kondisi fisik Laisa yang sempat membuat keempat adiknya khawatir akibat tak kunjung mendapatkan jodoh. Tapi apakah sebenarnya Laisa peduli dengan tubuhnya yang gemuk, berambut gimbal, dan pendek? Ataukah dia hanya fokus untuk keempat adiknya?</string>
    <string name="garis_waktu_sebuah_perjalanan_menghapus_luka">Garis Waktu: Sebuah Perjalanan Menghapus Luka</string>
    <string name="pada_sebuah_garis_waktu_yang_merangkak_maju_akan_ada_saatnya_kau_bertemu_dengan_satu_orang_yang_mengubah_hidupmu_untuk_selamanya_kemudian_satu_orang_tersebut_akan_menjadi_bagian_terbesar_dalam_agendamu_dan_hatimu_takkan_memberikan_pilihan_apa_pun_kecuali_jatuh_cinta_biarpun_logika_terus_berkata_bahwa_risiko_dari_jatuh_cinta_adalah_terjerembab_di_dasar_nestapa">Pada sebuah garis waktu yang merangkak maju, akan ada saatnya kau bertemu dengan satu orang yang mengubah hidupmu untuk selamanya. Kemudian, satu orang tersebut akan menjadi bagian terbesar dalam agendamu. Dan hatimu takkan memberikan pilihan apa pun kecuali jatuh cinta, biarpun logika terus berkata bahwa risiko dari jatuh cinta adalah terjerembab di dasar nestapa.</string>
    <string name="kata">Kata</string>
    <string name="penulis_geez_aan"><![CDATA[penulis: Geez & Aan]]></string>
    <string name="kata_bercerita_tentang_nugraha_biru_dan_binta_yang_kian_menjauh_tanpa_pernah_menjelaskan_perasaan_satu_sama_lain_mereka_harus_bicara_dan_mulai_membuka_hati_dan_mengungkapkan_isi_hati_agar_persahabatan_mereka_sempurna_kembali_dari_luka_karena_cinta">Kata, bercerita tentang Nugraha, Biru, dan Binta yang kian menjauh tanpa pernah menjelaskan perasaan satu sama lain. Mereka harus bicara dan mulai membuka hati, dan mengungkapkan isi hati agar persahabatan mereka sempurna kembali dari luka karena cinta.</string>
    <string name="kids_zaman_neo">Kids Zaman Neo</string>
    <string name="penulis_neona_feat_widya">penulis: Neona feat Widya</string>
    <string name="gundala_putra_petir">Gundala Putra Petir</string>
    <string name="penulis_hasmi">penulis: Hasmi</string>
    <string name="ketika_keadaan_kota_makin_buruk_dan_ketidakadilan_berkecamuk_di_seluruh_negara_sancaka_harus_memutuskan_apakah_dia_terus_hidup_menjaga_dirinya_sendiri_atau_bangkit_menjadi_pahlawan_bagi_mereka_yang_tertindas">Ketika keadaan kota makin buruk dan ketidakadilan berkecamuk di seluruh negara, Sancaka harus memutuskan, apakah dia terus hidup menjaga dirinya sendiri atau bangkit menjadi pahlawan bagi mereka yang tertindas.</string>
    <string name="log_in">LOG IN</string>
    <string name="dont_have_account">Dont have account?</string>
    <string name="bouks">BOUKS</string>
    <string name="kirim">kirim</string>
    <string name="sisa_waktu">SISA WAKTU BERLANGGANAN</string>
    <string name="_18">18</string>
    <string name="hari">HARI</string>
    <string name="beri_rating_buku_ini">Beri rating buku ini</string>
    <string name="contact_us">contact us</string>
    <string name="bouks_support_gmail_com">bouks.support@gmail.com</string>
    <string name="_0561_730022_bouks_id">(0561) 730022 | @bouks.id</string>
    <string name="_1_masukkan_kartu_atm_kemudian_masukkan_nomor_pin_anda_2_pilih_transaksi_lainnya_kemudian_pilih_transfer_3_silahkan_masukkan_no_bca_virtual_account_74102000xxxxxxxx_lalu_tekan_benar_4_periksa_kembali_data_transaksi_kemudian_tekan_benar_5_simpan_struk_anda_sebagai_bukti_pembayaran_penjual_akan_menerima_notifikasi_pembayaran">1. Masukkan kartu ATM kemudian masukkan nomor PIN Anda \n
        2. Pilih Transaksi lainnya, kemudian pilih Transfer \n
        3. ketikan nominal sebesar 50.000 \n
        4. Silahkan masukkan no. BCA Virtual Account (5485-078-778), lalu tekan Benar \n
        5. Periksa kembali data transaksi kemudian tekan Benar \n
        6. Simpan struk Anda sebagai bukti pembayaran \n
        7. foto bukti pembayaran lalu apload di aplikasi BOUKS \n
        8. tekan tombol "Konfirmasi" \n
        9. transaksi akan di proses dalam wakri 1x24 jam.</string>
    <string name="pilih_gambar">pilih gambar</string>
    <string name="my_library">My library</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="profil">Profil</string>
</resources>