<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="204dp"
        android:layout_height="197dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="95dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/bouks" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="156dp"
        android:layout_marginTop="226dp"
        android:text="@string/bouks"
        android:textSize="30sp"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="315dp"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:ignore="LabelFor,RelativeOverlap" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="356dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button5"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="61dp"
        android:layout_marginBottom="280dp"
        android:background="#2196F3"
        android:onClick="masuk"
        android:text="@string/log_in"
        android:textColor="#FDFFFFFF" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="95dp"
        android:background="@android:color/transparent"
        android:onClick="regis"
        android:text="@string/sign_up"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="91dp"
        android:layout_marginBottom="110dp"
        android:text="@string/dont_have_account" />

</RelativeLayout>