<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView52"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:text="@string/pembayaran"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="269dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="12dp"
        android:text="@string/_1_masukkan_kartu_atm_kemudian_masukkan_nomor_pin_anda_2_pilih_transaksi_lainnya_kemudian_pilih_transfer_3_silahkan_masukkan_no_bca_virtual_account_74102000xxxxxxxx_lalu_tekan_benar_4_periksa_kembali_data_transaksi_kemudian_tekan_benar_5_simpan_struk_anda_sebagai_bukti_pembayaran_penjual_akan_menerima_notifikasi_pembayaran"
        android:textAlignment="textStart"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="123dp"
        android:layout_height="118dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="157dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="280dp"
        android:text="@string/pilih_gambar" />

    <Button
        android:id="@+id/button2"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="94dp"
        android:background="#2196F3"
        android:onClick="k1"
        android:text="@string/konfirmasi"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="130dp"
        android:layout_marginBottom="328dp"
        android:text="@string/masukkan_no_rekening" />

</RelativeLayout>