<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView51"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:text="@string/profil"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="35sp" />

    <ImageButton
        android:id="@+id/imageButton19"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="297dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/todo"
        android:onClick="bayar"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/bayar" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="63dp"
        android:layout_marginBottom="293dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/todo"
        android:onClick="my"
        android:scaleType="fitXY"
        android:tint="#000000"
        app:srcCompat="@drawable/liblary" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="184dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="185dp"
        android:background="#00DA0808"
        android:text="@string/sisa_waktu"
        android:textAlignment="center"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <ImageButton
        android:id="@+id/imageButton20"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="247dp"
        android:layout_marginBottom="108dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/todo"
        android:onClick="out"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/logout" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="88dp"
        android:background="#000000" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="171dp"
        android:layout_marginBottom="63dp"
        android:text="@string/contact_us"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="119dp"
        android:layout_marginBottom="42dp"
        android:text="@string/bouks_support_gmail_com"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="22dp"
        android:text="@string/_0561_730022_bouks_id"
        android:textAlignment="center"
        tools:ignore="RelativeOverlap" />

    <ImageButton
        android:id="@+id/imageButton31"
        android:layout_width="190dp"
        android:layout_height="199dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        app:srcCompat="@drawable/userr"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="274dp"
        android:text="@string/my_library"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="278dp"
        android:text="@string/pembayaran"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="94dp"
        android:layout_marginBottom="149dp"
        android:text="@string/_18"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="131dp"
        android:text="@string/hari"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>