<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="180dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:background="?attr/colorButtonNormal"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/satu" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="124dp"
        android:text="@string/_11_11"
        android:textSize="35sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="44dp"
        android:text="@string/penulis_fiersa_besari"
        android:textSize="18sp"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/button"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="72dp"
        android:background="#2196F3"
        android:onClick="r1"
        android:text="@string/baca"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="94dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="354dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bercerita_tentang_jodoh_yang_sebenarnya_nggak_akan_kemana_mana_sebelum_akhirnya_menetap_pada_1_hati_ketika_waktunya_telah_tiba" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="330dp"
        android:text="@string/sipnosis"
        tools:ignore="RelativeOverlap" />

    <RatingBar
        android:id="@+id/ratingBar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="199dp"
        android:progressTint="#FFEB3B" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="317dp"
        android:layout_marginBottom="148dp"
        android:background="#2196F3"
        android:onClick="k1"
        android:text="@string/kirim"
        android:textColor="#FFFFFF" />

    <ImageButton
        android:id="@+id/imageButton14"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="5dp"
        android:background="#2196F3"
        android:contentDescription="@string/todo"
        android:onClick="berhasil"
        app:srcCompat="@drawable/perpus" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="257dp"
        android:text="@string/beri_rating_buku_ini"
        android:textSize="18sp" />

</RelativeLayout>