<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/imageButton30"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="247dp"
        android:layout_marginEnd="6dp"
        android:background="#2196F3"
        android:contentDescription="@string/todo"
        android:onClick="berhasil"
        app:srcCompat="@drawable/perpus" />

    <RatingBar
        android:id="@+id/ratingBar11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="202dp"
        android:progressTint="#FFEB3B" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="260dp"
        android:text="@string/beri_rating_buku_ini"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="314dp"
        android:layout_marginBottom="151dp"
        android:background="#2196F3"
        android:onClick="k1"
        android:text="@string/kirim"
        android:textColor="#FFFFFF" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="180dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:background="?attr/colorButtonNormal"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/sebelas" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="178dp"
        android:layout_height="92dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="36dp"
        android:text="@string/gundala_putra_petir"
        android:textSize="35sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="158dp"
        android:layout_marginEnd="97dp"
        android:text="@string/penulis_hasmi"
        android:textSize="18sp"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/button"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="247dp"
        android:layout_marginEnd="72dp"
        android:background="#2196F3"
        android:onClick="r11"
        android:text="@string/baca"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="91dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="354dp"
        android:layout_marginEnd="8dp"
        android:text="@string/ketika_keadaan_kota_makin_buruk_dan_ketidakadilan_berkecamuk_di_seluruh_negara_sancaka_harus_memutuskan_apakah_dia_terus_hidup_menjaga_dirinya_sendiri_atau_bangkit_menjadi_pahlawan_bagi_mereka_yang_tertindas" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="330dp"
        android:text="@string/sipnosis"
        tools:ignore="RelativeOverlap" />
</RelativeLayout>